@startuml

title __COMPARATOR's Class Diagram__\n

  package by.training.task3.comparator {
    class AmountOfFoundSymbolsInLexemeRevComparator {
        - character : Character
        {static} + LOGGER : Logger
        + AmountOfFoundSymbolsInLexemeRevComparator()
        + compare()
        - findAmountOfGivenSymbol()
    }
  }
  

  package by.training.task3.comparator {
    class AmountOfSentencesInParagraphComparator {
        {static} + LOGGER : Logger
        + compare()
    }
  }
  

  package by.training.task3.comparator {
    class AmountOfSymbolsInLexemeComparator {
        {static} + LOGGER : Logger
        + compare()
    }
  }
  

  AmountOfFoundSymbolsInLexemeRevComparator -up-|> Comparator
  AmountOfSentencesInParagraphComparator -up-|> Comparator
  AmountOfSymbolsInLexemeComparator -up-|> Comparator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
